force-app/main/default/objects/breg_TN_TM_SM__c/breg_TN_TM_SM__c.object-meta.xml
<CustomObject>
    <label>TN/TM/SM</label>
    <nameField>
        <label>TN/TM/SM Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TN/TM/SM</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>