force-app/main/default/objects/breg_TN_TM_SM__c/fields/breg_Account__c.field-meta.xml
<CustomField>
    <fullName>breg_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Aalta BREG-61</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>TN/TM/SM</relationshipLabel>
    <relationshipName>TN_TM_SM</relationshipName>
    <type>Lookup</type>
</CustomField>