force-app/main/default/objects/breg_TN_TM_SM__c/fields/breg_Additional_Entity_States__c.field-meta.xml
<CustomField>
    <fullName>breg_Additional_Entity_States__c</fullName>
    <label>Additional Entity States</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>breg_Additional_Entity_States</valueSetName>
    </valueSet>
</CustomField>