force-app/main/default/objects/breg_TN_TM_SM__c/fields/breg_Applicant_Name__c.field-meta.xml
<CustomField>
    <fullName>breg_Applicant_Name__c</fullName>
    <description>Aalta BREG-2083</description>
    <label>Applicant Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>