force-app/main/default/objects/breg_TN_TM_SM__c/fields/breg_BRIM_TRADE_MARK_ID__c.field-meta.xml
<CustomField>
    <fullName>breg_BRIM_TRADE_MARK_ID__c</fullName>
    <description>Aalta BREG-1355 Legacy BRIM system Id of the trademark</description>
    <externalId>true</externalId>
    <label>BRIM_TRADE_MARK_ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>