force-app/main/default/objects/breg_TN_TM_SM__c/fields/breg_Cancellation_Date__c.field-meta.xml
<CustomField>
    <fullName>breg_Cancellation_Date__c</fullName>
    <label>Cancellation Date</label>
    <type>Date</type>
</CustomField>