force-app/main/default/objects/breg_TN_TM_SM__c/fields/breg_Cert_Date__c.field-meta.xml
<CustomField>
    <fullName>breg_Cert_Date__c</fullName>
    <description>Aalta BREG-61</description>
    <label>Cert Date</label>
    <type>Date</type>
</CustomField>