force-app/main/default/objects/breg_TN_TM_SM__c/fields/breg_Cert_Number__c.field-meta.xml
<CustomField>
    <fullName>breg_Cert_Number__c</fullName>
    <description>Aalta BREG-61</description>
    <label>CERT #</label>
    <length>50</length>
    <type>Text</type>
</CustomField>