force-app/main/default/objects/breg_TN_TM_SM__c/fields/breg_Details__c.field-meta.xml
<CustomField>
    <fullName>breg_Details__c</fullName>
    <description>Aalta BREG-61</description>
    <label>Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>