force-app/main/default/objects/breg_TN_TM_SM__c/fields/breg_DocuSign_Envelope_Document__c.field-meta.xml
<CustomField>
    <fullName>breg_DocuSign_Envelope_Document__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Aalta BREG-61</description>
    <label>DocuSign Envelope Document</label>
    <referenceTo>dsfs__DocuSign_Envelope_Document__c</referenceTo>
    <relationshipLabel>TN/TM/SM</relationshipLabel>
    <relationshipName>TN_TM_SM</relationshipName>
    <type>Lookup</type>
</CustomField>