force-app/main/default/objects/breg_TN_TM_SM__c/fields/breg_End_Date_Active__c.field-meta.xml
<CustomField>
    <fullName>breg_End_Date_Active__c</fullName>
    <formula>NOT(ISBLANK(breg_End_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End Date Active</label>
    <type>Checkbox</type>
</CustomField>