force-app/main/default/objects/breg_TN_TM_SM__c/fields/breg_Entity_Nature_Of_Business__c.field-meta.xml
<CustomField>
    <fullName>breg_Entity_Nature_Of_Business__c</fullName>
    <description>Aalta BREG-2083</description>
    <label>Entity Nature Of Business</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>