force-app/main/default/objects/breg_TN_TM_SM__c/fields/breg_File_Suffix__c.field-meta.xml
<CustomField>
    <fullName>breg_File_Suffix__c</fullName>
    <label>File # Suffix</label>
    <length>255</length>
    <type>Text</type>
</CustomField>