force-app/main/default/objects/breg_TN_TM_SM__c/fields/breg_Has_Pending_Renewal__c.field-meta.xml
<CustomField>
    <fullName>breg_Has_Pending_Renewal__c</fullName>
    <formula>AND(
  breg_Last_Renewal_Case__r.breg_Is_Renewal__c= TRUE,
  ISPICKVAL(
    breg_Last_Renewal_Case__r.Status,
    &quot;Pending Submission&quot;
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Pending Renewal</label>
    <type>Checkbox</type>
</CustomField>