force-app/main/default/objects/breg_TN_TM_SM__c/fields/breg_Is_Active__c.field-meta.xml
<CustomField>
    <fullName>breg_Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Active (Deprecated)</label>
    <type>Checkbox</type>
</CustomField>