force-app/main/default/objects/breg_TN_TM_SM__c/fields/breg_Last_Renewal_Case__c.field-meta.xml
<CustomField>
    <fullName>breg_Last_Renewal_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last Renewal Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>TN/TM/SM</relationshipLabel>
    <relationshipName>TN_TM_SM</relationshipName>
    <type>Lookup</type>
</CustomField>