force-app/main/default/objects/breg_TN_TM_SM__c/fields/breg_Last_Renewal_Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>breg_Last_Renewal_Submission_Date__c</fullName>
    <formula>breg_Last_Renewal_Case__r.breg_Submission_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Renewal Submission Date</label>
    <type>Date</type>
</CustomField>