force-app/main/default/objects/breg_TN_TM_SM__c/fields/breg_Purpose__c.field-meta.xml
<CustomField>
    <fullName>breg_Purpose__c</fullName>
    <description>Aalta BREG-61</description>
    <label>Purpose (Deprecated)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>