force-app/main/default/objects/breg_TN_TM_SM__c/fields/breg_Registrant_Address__c.field-meta.xml
<CustomField>
    <fullName>breg_Registrant_Address__c</fullName>
    <label>Registrant Address</label>
    <type>Address</type>
</CustomField>