force-app/main/default/objects/breg_TN_TM_SM__c/fields/breg_Registrant_Name__c.field-meta.xml
<CustomField>
    <fullName>breg_Registrant_Name__c</fullName>
    <label>Registrant Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>