force-app/main/default/objects/breg_TN_TM_SM__c/fields/breg_Registrant_Type__c.field-meta.xml
<CustomField>
    <fullName>breg_Registrant_Type__c</fullName>
    <label>Registrant Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Entity</fullName>
            </value>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>CRA</fullName>
                <label>Commercial Registered Agent</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>