force-app/main/default/objects/breg_TN_TM_SM__c/fields/breg_Registration_Type__c.field-meta.xml
<CustomField>
    <fullName>breg_Registration_Type__c</fullName>
    <label>Registration Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Renewal</fullName>
            </value>
            <value>
                <fullName>Renew</fullName>
                <isActive>false</isActive>
                <label>Renew</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>