force-app/main/default/objects/breg_TN_TM_SM__c/fields/breg_Search_Xref_Name_2_NS__c.field-meta.xml
<CustomField>
    <fullName>breg_Search_Xref_Name_2_NS__c</fullName>
    <description>System field used for searching. Auto-populated by trigger with normalized no-space value from XREF Name 2.</description>
    <label>Search Xref Name 2 NS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>