force-app/main/default/objects/breg_TN_TM_SM__c/fields/breg_Similar_Name__c.field-meta.xml
<CustomField>
    <fullName>breg_Similar_Name__c</fullName>
    <description>Aalta BREG-61</description>
    <label>Similar Name</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>