force-app/main/default/objects/breg_TN_TM_SM__c/fields/breg_Status_Preview__c.field-meta.xml
<CustomField>
    <fullName>breg_Status_Preview__c</fullName>
    <description>Preview of the status that would be set by the expiration batch job</description>
    <label>Status Preview</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>E</fullName>
                <label>Expired</label>
            </value>
            <value>
                <fullName>A</fullName>
                <label>Active</label>
            </value>
            <value>
                <fullName>R</fullName>
                <label>Revoked</label>
            </value>
            <value>
                <fullName>C</fullName>
                <label>Canceled</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>