force-app/main/default/objects/breg_TN_TM_SM__c/fields/breg_Status_Preview_Date__c.field-meta.xml
<CustomField>
    <fullName>breg_Status_Preview_Date__c</fullName>
    <description>Timestamp when the status preview was last calculated</description>
    <label>Status Preview Date</label>
    <type>DateTime</type>
</CustomField>