force-app/main/default/objects/breg_TN_TM_SM__c/fields/breg_Status_Preview_Reason__c.field-meta.xml
<CustomField>
    <fullName>breg_Status_Preview_Reason__c</fullName>
    <description>Reason for the predicted status change</description>
    <label>Status Preview Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Expiration date passed</fullName>
            </value>
            <value>
                <fullName>Has pending renewal</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>