force-app/main/default/objects/breg_TN_TM_SM__c/fields/breg_Subscribe_Owner_Free_Email_Alerts__c.field-meta.xml
<CustomField>
    <fullName>breg_Subscribe_Owner_Free_Email_Alerts__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Aalta BREG-1037</description>
    <label>Subscribe Owner for Free Email Alerts</label>
    <type>Checkbox</type>
</CustomField>