force-app/main/default/objects/breg_TN_TM_SM__c/fields/breg_TM_SM_Category__c.field-meta.xml
<CustomField>
    <fullName>breg_TM_SM_Category__c</fullName>
    <description>Aalta BREG-61</description>
    <label>TM/SM Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TNTMSM_Classifications</valueSetName>
    </valueSet>
</CustomField>