force-app/main/default/objects/breg_TN_TM_SM__c/fields/breg_Trade_Name__c.field-meta.xml
<CustomField>
    <fullName>breg_Trade_Name__c</fullName>
    <label>Trade Name</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>