force-app/main/default/objects/breg_TN_TM_SM__c/fields/breg_Trade_Type__c.field-meta.xml
<CustomField>
    <fullName>breg_Trade_Type__c</fullName>
    <description>Aalta BREG-61</description>
    <label>Trade Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Application to List as Commercial Registered Agent (CRA)</fullName>
            </value>
            <value>
                <fullName>List of Entities represented by Commercial Registered Agent (CRAL)</fullName>
            </value>
            <value>
                <fullName>Termination of a Commercial Registered Agent (CRT)</fullName>
            </value>
            <value>
                <fullName>Amendment of Commercial Registered Agent (CRC)</fullName>
            </value>
            <value>
                <fullName>Statement of Change by CRA - Name Change (CRNC)</fullName>
            </value>
            <value>
                <fullName>Statement of Change by CRA - Address Change (CRAD)</fullName>
            </value>
            <value>
                <fullName>Statement of Change by CRA - Name and Address Change (CRNA)</fullName>
            </value>
            <value>
                <fullName>Statement of Change by CRA - Conversion (CRCV)</fullName>
            </value>
            <value>
                <fullName>Statement of Change by CRA - Merger (CRMG)</fullName>
            </value>
            <value>
                <fullName>Designation of Agent (AGD)</fullName>
            </value>
            <value>
                <fullName>Involuntary Revocation (INVR)</fullName>
            </value>
            <value>
                <fullName>License Filing (A2) (LIC)</fullName>
            </value>
            <value>
                <fullName>Registrant Revoked (RGRV)</fullName>
            </value>
            <value>
                <fullName>Amendment (AMBX)</fullName>
            </value>
            <value>
                <fullName>Domestic Merger/Consolidation (DMGBX)</fullName>
            </value>
            <value>
                <fullName>Partnership Registration Statement Domestic/Foreign (PRSBX)</fullName>
            </value>
            <value>
                <fullName>LLC Merger/Consolidation/Name Change (CMGBX)</fullName>
            </value>
            <value>
                <fullName>LLP Amendment (KAMBX)</fullName>
            </value>
            <value>
                <fullName>Trade Name (T1BX)</fullName>
            </value>
            <value>
                <fullName>Trade Mark (T2BX)</fullName>
            </value>
            <value>
                <fullName>Service Mark (T3BX)</fullName>
            </value>
            <value>
                <fullName>Reservation/Renewal of Name (R7BX)</fullName>
            </value>
            <value>
                <fullName>Certificate (CERBX)</fullName>
            </value>
            <value>
                <fullName>Order of Reinstatement (ORDER)</fullName>
            </value>
            <value>
                <fullName>Unknown Transaction Types (UNKN)</fullName>
            </value>
            <value>
                <fullName>Certificate of Administrative Dissolution (INDBX)</fullName>
            </value>
            <value>
                <fullName>Certificate of Revocation (INCBX)</fullName>
            </value>
            <value>
                <fullName>Certificate of Administrative Termination (ADMBX)</fullName>
            </value>
            <value>
                <fullName>Certificate of Revocation (RVKBX)</fullName>
            </value>
            <value>
                <fullName>TM/SM Classification (CLSF)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>