force-app/main/default/objects/breg_TN_TM_SM__c/fields/breg_Transaction__c.field-meta.xml
<CustomField>
    <fullName>breg_Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BREG Transaction</label>
    <referenceTo>breg_Transaction__c</referenceTo>
    <relationshipLabel>TN/TM/SM</relationshipLabel>
    <relationshipName>TN_TM_SM</relationshipName>
    <type>Lookup</type>
</CustomField>