force-app/main/default/objects/breg_TN_TM_SM__c/fields/breg_XREF_Name1__c.field-meta.xml
<CustomField>
    <fullName>breg_XREF_Name1__c</fullName>
    <description>Aalta BREG-61</description>
    <label>XREF NAME1</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>