force-app/main/default/objects/breg_TN_TM_SM__c/listViews/All_Active_TN_TM_SM_PR_expiring_today.listView-meta.xml
<ListView>
    <fullName>All_Active_TN_TM_SM_PR_expiring_today</fullName>
    <columns>breg_Trade_Name__c</columns>
    <columns>NAME</columns>
    <columns>breg_Expiration_Date__c</columns>
    <columns>breg_Status__c</columns>
    <columns>breg_Cert_Number__c</columns>
    <columns>breg_TM_SM_Category__c</columns>
    <columns>breg_Trade_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>breg_Expiration_Date__c</field>
        <operation>equals</operation>
        <value>N_DAYS_AGO:5</value>
    </filters>
    <filters>
        <field>breg_Status__c</field>
        <operation>equals</operation>
        <value>A</value>
    </filters>
    <label>All Active TN/TM/SM/PR expiring today</label>
</ListView>